Added: about to navbar

--- a/Contact.html
+++ b/Contact.html
@@ -40,6 +40,7 @@
             <ul role="menubar" class="u-custom-font u-font-montserrat u-nav u-spacing-2 u-unstyled u-nav-1"><li role="none" class="u-nav-item"><a role="menuitem" class="u-active-palette-1-base u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" href="./" style="padding: 10px 20px;">Home</a>
 </li><li role="none" class="u-nav-item"><a role="menuitem" class="u-active-palette-1-base u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" href="Register.html" target="_blank" rel="nofollow" style="padding: 10px 20px;">Register</a>
 </li><li role="none" class="u-nav-item"><a role="menuitem" class="u-active-palette-1-base u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" href="Contact.html" style="padding: 10px 20px;">Contact</a>
+</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-active-palette-1-base u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" href="About.html" target="_blank" style="padding: 10px 20px;">About</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse" id="4dd4" role="region" aria-label="Menu panel">
@@ -49,6 +50,7 @@
                 <ul class="u-align-center u-custom-font u-font-montserrat u-nav u-popupmenu-items u-unstyled u-nav-2" role="menubar"><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="./">Home</a>
 </li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="Register.html" target="_blank" rel="nofollow">Register</a>
 </li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="Contact.html">Contact</a>
+</li><li role="none" class="u-nav-item"><a tabindex="-1" role="menuitem" class="u-button-style u-nav-link" href="new-page-8360c109" target="_blank">About</a>
 </li></ul>
               </div>
             </div>
