Changed my photo to b&w aesthetic

--- a/About.html
+++ b/About.html
@@ -62,17 +62,17 @@
       </div></header>
     <section class="u-clearfix u-section-1" id="block-7">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <div class="u-align-center u-container-align-center-lg u-container-align-center-md u-container-align-center-sm u-container-align-center-xl u-container-style u-expanded-width u-group u-shape-rectangle u-group-1">
+        <div class="u-align-center u-container-align-center u-container-align-center-lg u-container-align-center-md u-container-align-center-sm u-container-align-center-xl u-container-style u-expanded-width u-group u-shape-rectangle u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <div class="custom-expanded u-color-var u-radius u-shape u-shape-round u-shape-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"></div>
             <img class="custom-expanded u-image u-image-round u-radius lazyload u-image-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" data-src="images/UTSAV-2-scaled.png" loading="lazy">
           </div>
         </div>
-        <div class="u-align-center u-container-style u-group u-shape-rectangle u-group-2">
+        <div class="u-align-center u-container-align-center u-container-style u-group u-shape-rectangle u-group-2">
           <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
             <h2 class="u-align-center u-text u-text-color-var u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="400" data-animation-delay="200">Experience Serenity with MyUtsav</h2>
             <p class="u-align-center u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500" data-animation-direction="">MyUtsav is an initiative which is dedicated to shifting the hectic pace of modern life towards a serene and fulfilling existence. Embrace tranquility and satisfaction with our transformative initiative.</p>
-            <a href="#" class="u-align-center u-btn u-button-style u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><span class="u-file-icon u-icon u-text-white"><img src="images/618-c5f192b4.png" alt=""></span>&nbsp; Connect on linkedin 
+            <a href="#" class="u-align-center u-btn u-button-style u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><span class="u-file-icon u-icon u-text-white"><img src="images/618-c5f192b4.png" alt=""></span>&nbsp; CONNECT on linkedin 
             </a>
             <a href="#" class="u-align-center u-btn u-button-style u-btn-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><span class="u-file-icon u-icon u-text-white"><img src="images/1077086-e66c315a.png" alt=""></span>&nbsp; Follow on INSTAGRAM
             </a>
@@ -89,10 +89,10 @@
             <div class="u-layout-row">
               <div class="u-align-center u-container-align-center u-container-style u-layout-cell u-left-cell u-size-23 u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <div alt="" class="u-image u-image-circle lazyload u-image-1" src="" data-image-width="4094" data-image-height="4094" data-bg="url(&quot;images/avatar_logo.png&quot;)"></div>
+                  <div alt="" class="u-image u-image-circle lazyload u-image-1" src="" data-image-width="1024" data-image-height="1024" data-bg="url(&quot;images/SakshamJoshi-bw-rounded-corner.png&quot;)"></div>
                 </div>
               </div>
-              <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-37 u-layout-cell-2">
+              <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-37 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-valign-top-xl u-container-layout-2">
                   <h2 class="u-align-left u-custom-font u-font-montserrat u-text u-text-default u-text-1">SAKSHAM JOSHI</h2>
                   <p class="u-align-left u-text u-text-2">As the developer and designer of the website, Saksham dedicated countless hours to building a fast, responsive, and visually engaging platform from the ground up. He handled every aspect of development, from design and functionality to optimization and user experience with great attention to detail and passion. Despite the hard work involved, he contributed voluntarily, <span style="font-weight: 700;">without any</span><span style="font-weight: 700;">&nbsp;<span style="font-weight: 700;">monetary expectation</span></span>, purely out of a desire to support the vision and mission of MyUtsav. His commitment, creativity, and technical excellence have played a crucial role in bringing this website to life.
