Fixed: Mobile-view navbar's About page directing to invalid page

--- a/About.html
+++ b/About.html
@@ -49,7 +49,7 @@
                 <ul class="u-align-center u-custom-font u-font-montserrat u-nav u-popupmenu-items u-unstyled u-nav-2" role="menubar"><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="./">Home</a>
 </li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="Register.html" target="_blank" rel="nofollow">Register</a>
 </li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="Contact.html">Contact</a>
-</li><li role="none" class="u-nav-item"><a tabindex="-1" role="menuitem" class="u-button-style u-nav-link" href="new-page-8360c109" target="_blank">About</a>
+</li><li role="none" class="u-nav-item"><a tabindex="-1" role="menuitem" class="u-button-style u-nav-link" href="About.html" target="_blank">About</a>
 </li></ul>
               </div>
             </div>
